package eng1.group9.EndScreen;

import com.badlogic.gdx.Game;
import com.badlogic.gdx.Screen;
import eng1.group9.BaseScreen;
import eng1.group9.ScreenInput;
import eng1.group9.ScreenUI;

public class EndScreen extends BaseScreen {

    public EndScreen(Game game) {
        super(game, new EndScreenUI(), new EndScreenInput());
    }

}
