package eng1.group9.GameScreen;

import com.badlogic.gdx.Game;
import com.badlogic.gdx.Screen;
import eng1.group9.BaseScreen;
import eng1.group9.ScreenInput;
import eng1.group9.ScreenUI;

public class GameScreen extends BaseScreen {

    public GameScreen(Game game) {
        super(game, new GameScreenUI(), new GameScreenInput());
    }

}
