package eng1.group9.GameScreen;

import eng1.group9.ScreenUI;

class GameScreenUI extends ScreenUI {
    @Override
    public void Update() {

    }
}
