package eng1.group9.StartScreen;

import eng1.group9.ScreenUI;

public class StartScreenUI extends ScreenUI {
    @Override
    public void Update() {

    }
}
